2002-04-12  Gary Thomas  <gthomas@redhat.com>

	* src/ipaq_pcmcia.c: Clean up warnings.

2001-07-13  Gary Thomas  <gthomas@redhat.com>

	* src/ipaq_pcmcia.c (cf_hwr_change_state): Use VERS_1 instead of
	MANID since some cards don't seem to support that.

2001-03-14  Gary Thomas  <gthomas@redhat.com>

	* src/ipaq_pcmcia.c (cf_hwr_init): Leave GPIO/timing setup to HAL code.

2001-03-01  Gary Thomas  <gthomas@redhat.com>

	* src/ipaq_pcmcia.c (cf_hwr_init): Remove [illegal] delay which caused
	this code to be unreliable when run in non-ROM mode.

2001-02-24  Gary Thomas  <gthomas@redhat.com>

	* src/ipaq_pcmcia.c:
	* cdl/pcmcia_ipaq.cdl: New file(s) - initial import of
	iPAQ support, contributed by Richard Panton, 3G Labs.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not