@@ -1,3 +1,8 @@
+2002-09-20  Gary Thomas  <gthomas@ecoscentric.com>
+
+	* include/ipaq.h: Define "LinkUP Systems" PCMCIA controller.  Used
+	on Compaq dual PCMCIA sleeve.
+
 2002-08-12  Mark Salter  <msalter@redhat.com>
 
 	* misc/redboot_ROM.ecm: Remove CYGSEM_REDBOOT_ARM_LINUX_BOOT.
