@@ -1,3 +1,8 @@
+2002-09-20  Gary Thomas  <gthomas@ecoscentric.com>
+
+	* src/ipaq_pcmcia.c: Additional setup required for Compaq dual
+	PCMCIA sleeve.
+
 2002-04-12  Gary Thomas  <gthomas@redhat.com>
 
 	* src/ipaq_pcmcia.c: Clean up warnings.
